# python-sql-json

./: .gitignore  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py  sql_json.py  test_sql_json.py
src/sql_json/: __init__.py  grammar.lark  sql_json.lark  sql_json.py
tests/: test_sql_json.py
