[tool.poetry]
name = "sql-json"
version = "0.1.0"
description = "Partial SQL/JSON implementation"
readme = "README.rst"
authors = ["wouter bolsterlee <wouter@bolsterl.ee>"]
homepage = "https://github.com/wbolster/python-sql-json"
license = "BSD"

[tool.poetry.dependencies]
python = ">= 3.6"
attrs = ">= 18.0"
lark-parser = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = ">= 3.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
